--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,17 @@
 body{
     padding: 0 30px;
-    width: 600px;
+    width: 1920px;
     margin: 0 auto;
 }
 
 .container{
+    width: 1440px;
     display:flex;
     justify-content: space-between;
     flex-wrap: wrap;
 }
 
+.contakt{
+    
+    
+}
